--- a/src/tools_pymodule/meson.build
+++ b/src/tools_pymodule/meson.build
@@ -26,7 +26,8 @@ py_tools = pymod.extension_module(
     ],
     cpp_args : '-DPYTHON_LIB='+module_name,
     install : true,
-    install_dir : pythoninstallpath
+    install_dir : pythoninstallpath,
+    install_tag : 'python-module'
 )
 
 
