--- a/meson.build
+++ b/meson.build
@@ -7,8 +7,11 @@
 project(
   'themachinethatgoesping_tools',
   'cpp',
-version : '0.0.1',
-default_options : ['warning_level=3', 'buildtype=release', 'cpp_std=c++20']
+  license : 'MPL-2.0'
+
+  version : '0.0.1.6-1',
+  default_options : ['warning_level=3', 'buildtype=release', 'cpp_std=c++17']
+)
 )
 
 projectnamespace = 'themachinethatgoesping'
