--- a/py_ext/meson.build
+++ b/py_ext/meson.build
@@ -19,11 +19,14 @@ if get_option('build_pythonmodule').enabled()
         # add folder path if there is a / in sources
         if fields.length() == 1
             pth = pythoninstallpath
+            #subdir = projectnamespace
         else
             pth = pythoninstallpath + source.replace(fields[-1],'/')
+            #subdir = projectnamespace + '/' + source.replace(fields[-1],'/')
         endif
 
-        install_data(source, install_dir : pth, install_tag : 'python-module')
+        install_data(source, install_dir : pth, install_tag : 'python-runtime')
+        #pymod.install_sources(source, subdir : subdir, install_tag : 'python-runtime')
     endforeach
 
         
