deactivated openmp for mac (for now)

--- a/meson.build
+++ b/meson.build
@@ -20,7 +20,7 @@ projectnamespace = 'themachinethatgoesping'
 if meson.get_compiler('cpp').get_id() == 'clang'
   #add_project_arguments('-Xpreprocess -fopenmp', language : 'cpp')
   omp_dep = declare_dependency(
-    compile_args : ['-Xpreprocess', '-fopenmp']
+    #compile_args : ['-Xpreprocess', '-fopenmp']
   )
 else
   omp_dep = dependency('openmp')
