--- a/python/meson.build
+++ b/python/meson.build
@@ -11,18 +11,19 @@ sources = [
 pymod = import('python').find_installation(get_option('python_path'), required : get_option('build_pythonmodule'))
 if get_option('build_pythonmodule').enabled()
     
-    foreach source : sources
-        #create install path for file
-        fields = [pymod.get_install_dir()]
-        foreach field : source.split('/')
-            if not field.endswith('.py')
-                fields += [field]
-            endif
+    if get_option('pydev_install').disabled() #don't install if pydev_install is activated
+        foreach source : sources
+            #create install path for file
+            fields = [pymod.get_install_dir()]
+            foreach field : source.split('/')
+                if not field.endswith('.py')
+                    fields += [field]
+                endif
+            endforeach
+            pth = '/'.join(fields)
+
+            install_data(source, install_dir: pth, install_tag: 'python-runtime')
         endforeach
-        pth = '/'.join(fields)
 
-        install_data(source, install_dir : pth, install_tag : 'python-runtime')
-        #pymod.install_sources(source, subdir : subdir, )
-    endforeach
-
+    endif
 endif
