fixed wrong template parameters in functions to allow impelemntation of slerp interpolator

--- a/src/tools/meson.build
+++ b/src/tools/meson.build
@@ -18,7 +18,8 @@ headers = [
   'vectorinterpolators/i_interpolator.hpp',
   'vectorinterpolators/linearinterpolator.hpp',
   'vectorinterpolators/nearestinterpolator.hpp',
-  'vectorinterpolators/akimainterpolator.hpp'
+  'vectorinterpolators/akimainterpolator.hpp',
+  'vectorinterpolators/slerpinterpolator.hpp'
 ]
 
 # -- targets --
