added and tested slerpinterpolator python module

--- a/src/tools_pymodule/meson.build
+++ b/src/tools_pymodule/meson.build
@@ -12,7 +12,8 @@ sources = [
     'vectorinterpolators/module.cpp',
     'vectorinterpolators/subm_nearestinterpolator.cpp',
     'vectorinterpolators/subm_linearinterpolator.cpp',
-    'vectorinterpolators/subm_akimainterpolator.cpp'
+    'vectorinterpolators/subm_akimainterpolator.cpp',
+    'vectorinterpolators/subm_slerpinterpolator.cpp'
 ]
 
 # define python module
