added pybind_default_copy function macros

--- a/src/tools/meson.build
+++ b/src/tools/meson.build
@@ -12,6 +12,7 @@ sources = [
 ]
 
 headers = [
+  'pybind11/classhelpers.hpp',
   'timeconv.hpp',
   'rotationfunctions/quaternions.hpp',
   'vectorinterpolators.hpp',
