--- a/src/tests/meson.build
+++ b/src/tests/meson.build
@@ -9,6 +9,7 @@ testcomponent = 'tools'
 sources = [
     'tutorial.test.cpp',
     'timeconv.test.cpp',
+    'bitsery_helpers/custom_types.test.cpp',
     'rotationfunctions/quaternions.test.cpp',
     'vectorinterpolators/common.test.cpp',
     'vectorinterpolators/nearest.test.cpp',
