--- a/src/tests/meson.build
+++ b/src/tests/meson.build
@@ -28,6 +28,7 @@ foreach source : sources
             link_language : 'cpp',
             override_options: [
             ],
+            cpp_args : '-D__PROJECT_TESTDATADIR__="' + meson.current_source_dir() + '/testdata"'
             #install : true
             )
 
