--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -68,6 +68,7 @@ jobs:
       uses: actions/checkout@v3
       with:
         submodules: recursive
+        lfs: true
 
     - name: install dependecies (c++)
       if:  ${{matrix.dep}}
