added float compar function

--- a/src/themachinethatgoesping/tools/meson.build
+++ b/src/themachinethatgoesping/tools/meson.build
@@ -13,6 +13,7 @@ sources = [
 
 headers = [
   'timeconv.hpp',
+  'helpers.hpp',
   'classhelpers/objectprinter.hpp',
   'classhelpers/bitsery.hpp',
   'classhelpers/bitsery_helpers/helpers.hpp',
