added indicators and old progress bar classes (adapted)

--- a/src/themachinethatgoesping/tools/meson.build
+++ b/src/themachinethatgoesping/tools/meson.build
@@ -40,6 +40,7 @@ if build_machine.system() != 'linux'
                           hinnant_date_dep,
                           bitsery_dep,
                           fmt_dep,
+                          indicators_dep,
                           magic_enum_dep],
                         override_options: [
                           'b_lundef=false'
@@ -55,6 +56,7 @@ else
                           hinnant_date_dep,
                           bitsery_dep,
                           fmt_dep,
+                          indicators_dep,
                           magic_enum_dep],
                         override_options: [
                           'b_lundef=false'
@@ -73,6 +75,7 @@ tools_dep = declare_dependency(
     hinnant_date_dep,
     bitsery_dep,
     fmt_dep,
+    indicators_dep,
     magic_enum_dep
   ],
   link_with : [tools_lib],
